--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -4,6 +4,7 @@
 	width: 100%;
 	max-width: 500px;
 	background: white;*/
+	height: auto;
         margin-top: 100px;
 	padding: 30px;
 	border: 1px solid rgba(0,0,0,0.2);
@@ -12,6 +13,6 @@
 }
 
 body{
-    background-image: url(../imagenes/patria1);
+    background-image: url(../imagenes/patria1.jpg);
     
 }
