commit desde la máquina del homosexual de josé

--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -10,9 +10,10 @@
 	border: 1px solid rgba(0,0,0,0.2);
         background: #FFF;
         color:#ac2925;
+		
 }
 
 body{
-    background-image: url(../imagenes/patria1.jpg);
+    background-image: url(../imagenes/23logotipo.jpg);
     
 }
